--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <!-- Logo -->
                 <a href="">
-                    <h1>Spanky</h1>
+                    <h1>Banky</h1>
                 </a>
                 <!-- Menu Items -->
                 <ul class="menu-item">
