--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -47,65 +47,17 @@
             </div>
         </div>
     </div>
-
-    <!--
-    -div.first-div
-    display: flex;
-    width: 95%;
-    max-width: 1170px;
-    margin-top: 140px;
-    margin-bottom: 140px;
-
-        -div.text-div
-            -h1.text-title
-                margin-top: 0;
-                margin-bottom: 0;
-                color: #fff;
-                font-size: 56px;
-                line-height: 70px;
-                Weight
-                800
-                Color
-                #ffffff
-                -span a text with some properties
-                background-image: url(https://assets.website-files.com/6115ba6…/61165ea…_Shape%20Green.svg);
-                background-position: 50% 50%;
-                background-size: contain;
-                background-repeat: no-repeat;
-            -p.main-text-text
-            margin-top: 30px;
-            color: #bfbfbf;
-            font-size: 18px;
-            line-height: 30px;
-            (Weight
-                400
-                Size
-                18px
-                Line Height
-                30px
-                Color
-                #bfbfbf)
-            -div main-text-btn
-                display: grid;
-                margin-top: 60px;
-                grid-column-gap: 30px;
-                -ms-grid-columns: 1fr 1fr;
-                grid-template-columns: 1fr 1fr;
-                -div.call-to-act-btn-div
-                - a tag with class main-btn
-                        padding: 16px 24px;
-                        justify-content:center;
-                        align-items: center;
-                        border-radius: 6px;
-                        background-color: #fdd241;
-                            color: #191b35;
-                        font-size: 16px;
-                        font-weight: 500;
-                        text-align: center;
-                        letter-spacing: .5px;
-             -a tag with call-to-act-btn
-        - div.first-div-img
-            -img
-    -->
+    <!-- Div of companies -->
+    <div class="companies">
+        <div class="companies-content">
+            <h2>You'll be in good company</h2>
+            <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61166e4315af300d16ff832c_Logo%201.svg" alt="company logo">
+            <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61166e4315af307971ff832e_Logo%204.svg" alt="company logo">
+            <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61166e4315af30195eff832a_Logo%205.svg" alt="company logo">
+            <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61166e4315af30d505ff832b_Logo%202.svg" alt="company logo">
+        </div>
+        
+    </div>
+ 
 </body>
 </html>
