--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -58,6 +58,67 @@
         </div>
         
     </div>
- 
+ <!--
+     div.how-it-works
+        div.how-it-works-block
+            -h2
+            color: #191b35;
+            font-size: 48px;
+            line-height: 60px;
+            font-weight: 600;
+             - span
+             https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea66534b33a0d0cffa6_Text%20Span%20Shape.svg
+             background-image: url(https://assets.website-files.com/6115ba6…/61165ea…_Text%20Span%20Shape.svg);
+                background-position: 50% 100%;
+                background-size: contain;
+                background-repeat: no-repeat;
+                color: #3fdeae;
+            -div.cards-div
+            display: grid;
+            margin-top: 80px;
+            grid-auto-columns: 1fr;
+            grid-column-gap: 15px;
+            -ms-grid-columns: 1fr 1px 1fr 1px 1fr 1px 1fr;
+            grid-template-columns: 1fr 1px 1fr 1px 1fr 1px 1fr;
+            -ms-grid-rows: auto;
+            grid-template-rows: auto;
+            justify-content: start;
+                -div.card-blocks
+                position: relative;
+                padding-top: 30px;
+                padding-bottom: 30px;
+                border-radius: 16px;
+                transition: background-color .3s ease-in-out;
+                cursor: crosshair;
+                 -h4.card-title
+                  margin: 0 30px 50px;
+                  -span
+                  font-size: 24px;
+                    line-height: 40px;
+                    font-weight: 500;
+                 -div.img-bg
+                    -img
+                        border: 0;
+                        vertical-align: middle;
+                        display: inline-block;
+                        max-width: 100%;
+                    -div.circle-bg
+                        position: absolute;
+                        left: 0;
+                        top: 14%;
+                        right: 0;
+                        bottom: 0;
+                        max-height: 270px;
+                        /* max-width: 270px; */
+                        background-image: url(https://assets.website-files.com/6115ba6…/6116d15…_Circel%20BG.svg);
+
+                    -p.card-paragraph
+                        margin: 40px 30px 0;
+                        font-size: 14px;
+                        line-height: 24px;
+                    
+
+ -->        
+
 </body>
 </html>
