--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -72,39 +72,42 @@
                     <div class="img-bg">
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea4ec7a65bf0c31ffc0_Card.png" loading="lazy" height="148" alt="">
                         <div class="circle-bg"></div>
-                        <p class="card-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                     </div>
+                    <p class="card-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                 </div>
+                <div class="vertical-divider"></div>
                 <!-- 2nd Card -->
                 <div class="card-blocks">
                     <h4 class="card-title">One <span>Wallet</span></h4>
                     <div class="img-bg">
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea615af3087ccff26a6_wallet.png" loading="lazy" height="148" alt="">
                         <div class="circle-bg"></div>
-                        <p class="card-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                     </div>                  
+                    <p class="card-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                 </div>
+                <div class="vertical-divider"></div>
                 <!-- 3rd Card -->
                 <div class="card-blocks">
-                    <h4 class="card-title">Save<span>Money</span></h4>
+                    <h4 class="card-title">Save <span>Money</span></h4>
                     <div class="img-bg">
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea6f39a1adfab3dc983_Pig.png" loading="lazy" height="148" alt="">
                         <div class="circle-bg"></div>
-                        <p class="card-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                     </div>
+                    <p class="card-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                 </div>
+                <div class="vertical-divider"></div>
                 <!-- 4th Card -->
                 <div class="card-blocks">
                     <h4 class="card-title">100% <span>Secure</span></h4>
                     <div class="img-bg">
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea6ec7a65502431ffc1_Shield.png" loading="lazy" height="148" alt="">
                         <div class="circle-bg"></div>
-                        <p class="card-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                     </div>
+                    <p class="card-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                 </div>
 
             </div>
