--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -113,6 +113,77 @@
             </div>
         </div>
     </div>
+    <!-- Div of Features -->
+    <div id="Features">
+
+        <div class="block-content">
+            <!-- Heading -->
+            <h2 class="section-title">Our <span>Features</span></h2>
+            <!-- Block content -->
+            <div class="features-grid">
+                <!-- 1st block -->
+                <div class="feature-block">
+                    <div class="icon-bg-circle">
+                        <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea57483a2e69e4587ee_icons8-statistic-document-96%20(1)%201.png" loading="lazy" alt="" class="feature-icon">
+                    </div>
+                    <div class="feature-name-text">
+                        <h4 class="feature-title-small">Wallet</h4>
+                        <p class="feature-text-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
+                    </div>
+                </div>
+                <!-- 2nd block -->
+                <div class="feature-block">
+                    <div class="icon-bg-circle">
+                        <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea56534b35e420cff84_icons8-cash-app-96%201.png" loading="lazy" alt="" class="feature-icon">
+                    </div>
+                    <div class="feature-name-text">
+                        <h4 class="feature-title-small">Cashback</h4>
+                        <p class="feature-text-small">Donec suscipit ac tellus vitae convallis. Duis posuere turpis id ex aliquam sagittis.</p>
+                    </div>
+                </div>
+                <!-- 3rd block -->
+                <div class="feature-block">
+                    <div class="icon-bg-circle">
+                        <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea587809d552b8cc09b_icons8-access-denied-96%201.png" loading="lazy" alt="" class="feature-icon">
+                    </div>
+                    <div class="feature-name-text">
+                        <h4 class="feature-title-small">Limits</h4>
+                        <p class="feature-text-small">Sed blandit, tellus ac sagittis tempus, eros mauris porttitor nibh, et elementum metus.</p>
+                    </div>
+                </div>
+                <!-- 4th block -->
+                <div class="feature-block">
+                    <div class="icon-bg-circle">
+                        <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5f1a7bece12e5f978_icons8-one-time-password-96%201.png" loading="lazy" alt="" class="feature-icon">
+                    </div>
+                    <div class="feature-name-text">
+                        <h4 class="feature-title-small">Security</h4>
+                        <p class="feature-text-small">Curabitur tempus lectus a varius euismod. Nulla facilisi. Nam tristique ornare massa eu.</p>
+                    </div>
+                </div>
+                <!-- 5th block -->
+                <div class="feature-block">
+                    <div class="icon-bg-circle">
+                        <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5f39a1a6b4f3dc982_icons8-calendar-96%201.png" loading="lazy" alt="" class="feature-icon">
+                    </div>
+                    <div class="feature-name-text">
+                        <h4 class="feature-title-small">Calendar</h4>
+                        <p class="feature-text-small">Vivamus sagittis mi in laoreet faucibus. In faucibus metus leo, in euismod justo porttitor sed.</p>
+                    </div>
+                </div>
+                <!-- 6th block -->
+                <div class="feature-block">
+                    <div class="icon-bg-circle">
+                        <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5cdb048de2d833540_icons8-customer-support-96%201.png" loading="lazy" alt="" class="feature-icon">
+                    </div>
+                    <div class="feature-name-text">
+                        <h4 class="feature-title-small">Support</h4>
+                        <p class="feature-text-small">Vestibulum condimentum lacus velit, sit amet blandit elit molestie mattis. Cras iaculis commodo.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
  <!--
     -div#Features
         position: relative;
