--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -127,8 +127,8 @@
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea57483a2e69e4587ee_icons8-statistic-document-96%20(1)%201.png" loading="lazy" alt="" class="feature-icon">
                     </div>
                     <div class="feature-name-text">
-                        <h4 class="feature-title-small">Wallet</h4>
-                        <p class="feature-text-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
+                        <h4>Wallet</h4>
+                        <p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis.</p>
                     </div>
                 </div>
                 <!-- 2nd block -->
@@ -137,8 +137,8 @@
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea56534b35e420cff84_icons8-cash-app-96%201.png" loading="lazy" alt="" class="feature-icon">
                     </div>
                     <div class="feature-name-text">
-                        <h4 class="feature-title-small">Cashback</h4>
-                        <p class="feature-text-small">Donec suscipit ac tellus vitae convallis. Duis posuere turpis id ex aliquam sagittis.</p>
+                        <h4>Cashback</h4>
+                        <p">Donec suscipit ac tellus vitae convallis. Duis posuere turpis id ex aliquam sagittis.</p>
                     </div>
                 </div>
                 <!-- 3rd block -->
@@ -147,8 +147,8 @@
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea587809d552b8cc09b_icons8-access-denied-96%201.png" loading="lazy" alt="" class="feature-icon">
                     </div>
                     <div class="feature-name-text">
-                        <h4 class="feature-title-small">Limits</h4>
-                        <p class="feature-text-small">Sed blandit, tellus ac sagittis tempus, eros mauris porttitor nibh, et elementum metus.</p>
+                        <h4>Limits</h4>
+                        <p">Sed blandit, tellus ac sagittis tempus, eros mauris porttitor nibh, et elementum metus.</p>
                     </div>
                 </div>
                 <!-- 4th block -->
@@ -157,8 +157,8 @@
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5f1a7bece12e5f978_icons8-one-time-password-96%201.png" loading="lazy" alt="" class="feature-icon">
                     </div>
                     <div class="feature-name-text">
-                        <h4 class="feature-title-small">Security</h4>
-                        <p class="feature-text-small">Curabitur tempus lectus a varius euismod. Nulla facilisi. Nam tristique ornare massa eu.</p>
+                        <h4>Security</h4>
+                        <p">Curabitur tempus lectus a varius euismod. Nulla facilisi. Nam tristique ornare massa eu.</p>
                     </div>
                 </div>
                 <!-- 5th block -->
@@ -167,8 +167,8 @@
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5f39a1a6b4f3dc982_icons8-calendar-96%201.png" loading="lazy" alt="" class="feature-icon">
                     </div>
                     <div class="feature-name-text">
-                        <h4 class="feature-title-small">Calendar</h4>
-                        <p class="feature-text-small">Vivamus sagittis mi in laoreet faucibus. In faucibus metus leo, in euismod justo porttitor sed.</p>
+                        <h4>Calendar</h4>
+                        <p">Vivamus sagittis mi in laoreet faucibus. In faucibus metus leo, in euismod justo porttitor sed.</p>
                     </div>
                 </div>
                 <!-- 6th block -->
@@ -177,68 +177,14 @@
                         <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5cdb048de2d833540_icons8-customer-support-96%201.png" loading="lazy" alt="" class="feature-icon">
                     </div>
                     <div class="feature-name-text">
-                        <h4 class="feature-title-small">Support</h4>
-                        <p class="feature-text-small">Vestibulum condimentum lacus velit, sit amet blandit elit molestie mattis. Cras iaculis commodo.</p>
+                        <h4>Support</h4>
+                        <p">Vestibulum condimentum lacus velit, sit amet blandit elit molestie mattis. Cras iaculis commodo.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
- <!--
-    -div#Features
-        position: relative;
-        -div.block-content
-            margin-top: 120px;
-            margin-bottom: 120px;
-            position: relative;
-            z-index: 1;
-            display: flex;
-            width: 95%;
-            max-width: 1170px;
-            margin-top: 60px;
-            margin-bottom: 60px;
-            flex-direction: column;
-            align-items: center;
-            ->h2.section-title
-                margin-top: 0;
-                margin-bottom: 0;
-                ->h2
-                color: #191b35;
-                font-size: 48px;
-                line-height: 60px;
-                font-weight: 600;
-                    ->span
-                    background-image: url(https://assets.website-files.com/6115ba6…/61165ea…_Text%20Span%20Shape.svg);
-                    background-position: 50% 100%;
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                    color: #3fdeae;
-            ->div.features-grid
-                display: grid;
-                margin-top: 80px;
-                grid-auto-columns: 1fr;
-                grid-column-gap: 30px;
-                grid-row-gap: 30px;
-                -ms-grid-columns: 1fr 1fr 1fr;
-                grid-template-columns: 1fr 1fr 1fr;
-                ->feature-block
-                    display: grid;
-                    padding: 24px;
-                    flex-direction: row;
-                    grid-auto-columns: 1fr;
-                    grid-column-gap: 14px;
-                    grid-row-gap: 16px;
-                    -ms-grid-columns: 48px 1fr;
-                    grid-template-columns: 48px 1fr;
-                    -ms-grid-rows: auto;
-                    grid-template-rows: auto;
-                    border-radius: 16px;
-                    background-color: #fff;
-                    -webkit-transition: box-shadow .3s ease-in-out;
-                    transition: box-shadow .3s ease-in-out;
-                    cursor: crosshair;
-        -div.features-bg
- -->        
+     
 
 </body>
 </html>
