Updated some things in previous portfolio project

--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -99,7 +99,7 @@
     <!-- Project Heading -->
     <div class="skill-heading ml-5">
         <span>My Skills</span>
-        <h2>My Expertise</h2>
+        <h2>My Projects</h2>
     </div>
     <!-- Project Showcase -->
     <div class="project-showcase">
@@ -167,7 +167,7 @@
 </section>
 <!-- Contact Us section -->
 <section id="contact">
-    <img src="" alt=""/>
+    <img src="assets/imgs/Contact us-bro.svg" alt=""/>
     <h3>Let's work together</h3>
     <div class="contact-input">
         <input type="email" placeholder="ahmed.raza@thedevnation.com">
