Fixed some bugs

--- a/Week2/Assignment24thDec/index.html
+++ b/Week2/Assignment24thDec/index.html
@@ -167,7 +167,7 @@
 </section>
 <!-- Contact Us section -->
 <section id="contact">
-    <img src="assets/imgs/Contact us-bro.svg" alt=""/>
+    <img src="assets/imgs/Contact us-bro.svg" height="300px" alt=""/>
     <h3>Let's work together</h3>
     <div class="contact-input">
         <input type="email" placeholder="ahmed.raza@thedevnation.com">
