Update index.html and index.css. Done with the Features html and styling

--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -112,7 +112,7 @@
 
             </div>
         </div>
-        <!-- Div of Features -->
+        <!-- Div of Features #1 -->
     <div id="Features">
 
         <div class="block-content">
@@ -182,6 +182,33 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- Feafutres div #2 -->
+    <div class="first-div feature-show-div">
+        <!-- Div on the left -->
+        <div class="text-div features-show">
+            <h1 class="title-text">Made For Easy To Use <span>Template</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis turpis laoreet.</p>
+            <a href="" class="main-btn">Buy Template</a>
+        </div>
+        <!-- Div on the right -->
+        <div class="img-div">
+            <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea5f7fb45162eb9ad43_Feature%20Phone%202.png" alt="App screen">
+        </div>
+    </div>
+    <!-- Feafutres div #3 -->
+    <div class="first-div feature-show-div">
+        <!-- Div on the left -->
+        <div class="img-div">
+            <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea487dc1015e9cd2afa_Feature%20Phone%201.png" alt="App screen">
+        </div>
+        <!-- Div on the right -->
+        <div class="text-div features-show">
+            <h1 class="title-text">Made For Easy To Use <span>Template</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis sapien quis turpis laoreet.</p>
+            <a href="" class="main-btn">Buy Template</a>
+        </div>
+        
     </div>
     </div>
     
