Update index.css . Done with styling of Feedback

--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -197,7 +197,7 @@
         </div>
     </div>
     <!-- Feafutres div #3 -->
-    <div class="first-div feature-show-div">
+    <div class="first-div feature-show-div" id="feature-show-div3">
         <!-- Div on the left -->
         <div class="img-div">
             <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/61165ea487dc1015e9cd2afa_Feature%20Phone%201.png" alt="App screen">
@@ -226,7 +226,7 @@
                         <h4>Ahmed Raza</h4>
                         <p>Software Developer</p>
                     </div>
-                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118ee505f69af8d6aab61df_icons8-quote-left-96.png" alt="">
+                    <!--<img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118ee505f69af8d6aab61df_icons8-quote-left-96.png" alt="">-->
 
                 </div>
                 <p>“Sed rutrum egestas semper. Ut tincidunt vitae mauris id pellentesque. Duis venenatis ultricies turpis”</p>
@@ -239,7 +239,7 @@
                         <h4>Ahmed Raza</h4>
                         <p>Software Developer</p>
                     </div>
-                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118ee505f69af8d6aab61df_icons8-quote-left-96.png" alt="">
+                    <!--<img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118ee505f69af8d6aab61df_icons8-quote-left-96.png" alt="">-->
 
                 </div>
                 <p>“Sed rutrum egestas semper. Ut tincidunt vitae mauris id pellentesque. Duis venenatis ultricies turpis”</p>
@@ -252,7 +252,7 @@
                         <h4>Ahmed Raza</h4>
                         <p>Software Developer</p>
                     </div>
-                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118ee505f69af8d6aab61df_icons8-quote-left-96.png" alt="">
+                    <!--<img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118ee505f69af8d6aab61df_icons8-quote-left-96.png" alt="">-->
 
                 </div>
                 <p>“Sed rutrum egestas semper. Ut tincidunt vitae mauris id pellentesque. Duis venenatis ultricies turpis”</p>
