Update index.html . Some errors

--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="testimonial-block">
                 <div class="testimonial-image">
-                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118b53da8d9445a2b8b6039_Client%20Image%201.png" alt="">
+                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118b53da8d94492bd8b603b_Client%20Image%202.png" alt="">
                     <div class="name-position">
                         <h4>Ahmed Raza</h4>
                         <p>Software Developer</p>
@@ -247,7 +247,7 @@
             </div>
             <div class="testimonial-block">
                 <div class="testimonial-image">
-                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118b53da8d9445a2b8b6039_Client%20Image%201.png" alt="">
+                    <img src="https://assets.website-files.com/6115ba6494f278764d0490f1/6118b53da8d94485d28b603d_Client%20Image%203.png" alt="">
                     <div class="name-position">
                         <h4>Ahmed Raza</h4>
                         <p>Software Developer</p>
@@ -262,19 +262,21 @@
 
         </div>
     </div>
+        <!-- Div of FAQS -->
+            <!-- Div of block-content-->
+                <!-- h2 section-title -->
+                <!-- Div of 2 columns -->
+                    <!-- 1st Column -->
+                        <!-- div.block-faqs--->
+                            <!-- div.faqs-title-->
+                                <!-- Heading -->
+                                <!-- Arrow to click -->
+                            <!-- div.faqs-content -->
+                                
+
+                    <!-- 1st Column -->
     <!--
-        #testimonials
-            ->h1
-                ->span
-            ->.section-text
-            ->.testimonal-grid
-                ->testimonial-block
-                    ->testimonial-image
-                        ->img
-                    ->.name-position
-                        ->testimonial-name
-                        ->testimonial-position
-                    ->img
+
     -->
     </div>
     
