Update index.html . Done with thinking of styling FAQS

--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -272,7 +272,8 @@
                                 <!-- Heading -->
                                 <!-- Arrow to click -->
                             <!-- div.faqs-content -->
-                                
+                                <!-- div.space-->
+                                <!-- p.faqs-paragraph -->
 
                     <!-- 1st Column -->
     <!--
