--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -358,7 +358,48 @@
           </div>
       </div>
   </div>
-     
+
+     <div class="footer">
+         <div class="footer-block">
+             <div class="footer-links-box">
+                 <div class="footer-cloumn">Banky</div>
+                 <div class="block-footer">
+                     <h5 class="footer-title">Company</h5>
+                     <div class="footer-nav-link-line">
+                         <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                        </div>
+                    </div>
+                    <div class="footer-nav-link-line">
+                        <a href="#How-It-Works" class="footer-link">
+                            How It Works</a>
+                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            </div>
+                        </div>
+                        <div class="footer-nav-link-line">
+                            <a href="#Features" class="footer-link">Features</a>
+                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            </div>
+                        </div>
+                        <div class="footer-nav-link-line">
+                            <a href="#Testimonials" class="footer-link">Testimonials</a>
+                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            </div>
+                        </div>
+                        <div class="footer-nav-link-line">
+                            <a href="#FAQs" class="footer-link">FAQs</a>
+                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            </div>
+                        </div>
+                    </div>
+             </div>
+             <div class="footer-benchmark-line">
+                <div class="text-block">© Banky. All rights reserved</div>
+                <div class="powered">
+                    Powered by <a href="https://webflow.com/" target="_blank" class="webflow">Webflow</a>
+                </div>
+             </div>
+         </div>
+     </div>
 
 </body>
 </html>
