--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -362,7 +362,9 @@
      <div class="footer">
          <div class="footer-block">
              <div class="footer-links-box">
-                 <div class="footer-cloumn">Banky</div>
+                 <div class="footer-cloumn">
+                     <a href=""><h1>Banky</h1></a>
+                 </div>
                  <div class="block-footer">
                      <h5 class="footer-title">Company</h5>
                      <div class="footer-nav-link-line">
@@ -395,7 +397,7 @@
              <div class="footer-benchmark-line">
                 <div class="text-block">© Banky. All rights reserved</div>
                 <div class="powered">
-                    Powered by <a href="https://webflow.com/" target="_blank" class="webflow">Webflow</a>
+                    Designed by <a href="" >Ahmed Raza</a>
                 </div>
              </div>
          </div>
