--- a/Week3/A2 HTML and CSS/index.html
+++ b/Week3/A2 HTML and CSS/index.html
@@ -20,10 +20,10 @@
                 </a>
                 <!-- Menu Items -->
                 <ul class="menu-item">
-                    <li><a href="#how-it-works">How it works</a></li>
+                    <li><a href="#how-it-work">How it works</a></li>
                     <li><a href="#Features">Features</a></li>
-                    <li><a href="">Testimonials</a></li>
-                    <li><a href="">FAQs</a></li>
+                    <li><a href="#customer-feedback">Testimonials</a></li>
+                    <li><a href="#FAQS">FAQs</a></li>
                 </ul>
                 <!-- Call to Action -->
                 <a href="" class="call-to-act-btn">Buy Template <span class="arrow-btn"> →</span></a>
@@ -61,7 +61,7 @@
     
     <div id="how-it-works">
         <!-- Div of how it works-block -->
-        <div class="how-it-works-block">
+        <div class="how-it-works-block" id="how-it-work">
             <!-- Heading  -->
             <h2>How It <span>Works</span></h2>
             <!-- Cards Div with card blocks -->
@@ -114,7 +114,7 @@
         </div>
         <!-- Div of Features #1 -->
     <div id="Features">
-
+        <div class="coin"></div>
         <div class="block-content">
             <!-- Heading -->
             <h2 class="section-title">Our <span>Features</span></h2>
@@ -182,6 +182,7 @@
                 </div>
             </div>
         </div>
+        <div class="square"></div>
     </div>
     <!-- Feafutres div #2 -->
     <div class="first-div feature-show-div" id="feature-show-div2">
@@ -358,7 +359,7 @@
           </div>
       </div>
   </div>
-
+     <!-- Div Footer -->
      <div class="footer">
          <div class="footer-block">
              <div class="footer-links-box">
@@ -368,28 +369,28 @@
                  <div class="block-footer">
                      <h5 class="footer-title">Company</h5>
                      <div class="footer-nav-link-line">
-                         <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                         <div class="footer-hover-line" >
                         </div>
                     </div>
                     <div class="footer-nav-link-line">
-                        <a href="#How-It-Works" class="footer-link">
+                        <a href="#how-it-work" class="footer-link">
                             How It Works</a>
-                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            <div class="footer-hover-line" >
                             </div>
                         </div>
                         <div class="footer-nav-link-line">
                             <a href="#Features" class="footer-link">Features</a>
-                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            <div class="footer-hover-line" >
                             </div>
                         </div>
                         <div class="footer-nav-link-line">
-                            <a href="#Testimonials" class="footer-link">Testimonials</a>
-                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            <a href="#customer-feedback" class="footer-link">Testimonials</a>
+                            <div class="footer-hover-line" >
                             </div>
                         </div>
                         <div class="footer-nav-link-line">
-                            <a href="#FAQs" class="footer-link">FAQs</a>
-                            <div class="footer-hover-line" style="transform: translate3d(0px, 0px, 0px) scale3d(0, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                            <a href="#FAQS" class="footer-link">FAQs</a>
+                            <div class="footer-hover-line" >
                             </div>
                         </div>
                     </div>
