--- a/Week3/Responsive/index.html
+++ b/Week3/Responsive/index.html
@@ -27,5 +27,31 @@
             </div>
         </div>
     </section>
+
+    <section class="bg-dark">
+        <div class="container">
+            <div class="split">
+                <div><img src="" alt="image1"></div>
+                <div>
+                    <h2>This is a title</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-primary">
+        <div class="container">
+            <div class="split">
+                <div>
+                    <h2>This is a title</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+                <div><img src="" alt="image2"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
