--- a/Week3/Responsive/index.html
+++ b/Week3/Responsive/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="bg-light text-center">
+        <div class="container container--narrow">
             <p>Basic Small Description</p>
             <h2>Responsive Design, Made Easy</h2>
         </div>
     </section>
     <section>
         <div class="container">
-            <h2>Quality Design</h2>
+            <h2 class="text-center">Quality Design</h2>
             <div class="split">
                 <div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
