--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -9,6 +9,29 @@
 
 </head>
 <body>
+  <!-- Navbar Section -->
+  <section id="navbar-sec">
+    <!-- Navbar code -->
+    <nav>
+        <!-- Logo -->
+        <a href="">
+            <h1>Banky</h1>
+        </a>
+        <!-- Menu Items -->
+        <ul class="menu-item">
+            <li><a href="#how-it-work">How it works</a></li>
+            <li><a href="#Features">Features</a></li>
+            <li><a href="#customer-feedback">Testimonials</a></li>
+            <li><a href="#FAQS">FAQs</a></li>
+        </ul>
+        <!-- Call to Action -->
+        <a href="" class="call-to-act-btn">Buy Template <span class="arrow-btn"> →</span></a>
+    </nav>
+  </section>
+  <!--
+    .nav
+  -->
+
 
   Home
   About
