--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -15,17 +15,18 @@
     <nav>
         <!-- Logo -->
         <a href="">
-            <h1>Banky</h1>
+            <h1>easybank</h1>
         </a>
         <!-- Menu Items -->
         <ul class="menu-item">
-            <li><a href="#how-it-work">How it works</a></li>
-            <li><a href="#Features">Features</a></li>
-            <li><a href="#customer-feedback">Testimonials</a></li>
-            <li><a href="#FAQS">FAQs</a></li>
+            <li><a href="#how-it-work">Home</a></li>
+            <li><a href="#Features">About</a></li>
+            <li><a href="#customer-feedback">Contact</a></li>
+            <li><a href="#FAQS">Blog</a></li>
+            <li><a href="#FAQS">Careers</a></li>
         </ul>
         <!-- Call to Action -->
-        <a href="" class="call-to-act-btn">Buy Template <span class="arrow-btn"> →</span></a>
+        <a href="" class="call-to-act-btn">Request Invite <span class="arrow-btn"> →</span></a>
     </nav>
   </section>
   <!--
