--- a/Week4/Bootstrap masterclass/index.html
+++ b/Week4/Bootstrap masterclass/index.html
@@ -9,13 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
             <!-- nav -->
-            <div class="container-fluid">
+            <div class="container-fluid" style="box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;">
                 <div class="container">
                     <div class="row">
-                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <nav class="navbar navbar-expand-lg navbar-light">
                             <div class="container-fluid">
                               <a class="navbar-brand" href="#">
                                   <div class="logo d-flex justify-content-center align-items-center" style="width: 200px;">
@@ -26,32 +24,17 @@
                                 <span class="navbar-toggler-icon"></span>
                               </button>
                               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                  <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                  </li>
-                                  <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
-                                  </li>
-                                  <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                      Dropdown
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                      <li><a class="dropdown-item" href="#">Action</a></li>
-                                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+                                      <li><a class="dropdown-item" href="#">Home</a></li>
+                                      <li><a class="dropdown-item" href="#">Contact</a></li>
                                       <li><hr class="dropdown-divider"></li>
                                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                                     </ul>
                                   </li>
-                                  <li class="nav-item">
-                                    <a class="nav-link disabled">Disabled</a>
-                                  </li>
                                 </ul>
-                                <form class="d-flex">
-                                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                  <button class="btn btn-outline-success" type="submit">Search</button>
-                                </form>
+                                <div class="contact-info">
+                                    Call us: (+92) 332 12324
+                                </div>
                               </div>
                             </div>
                           </nav>
@@ -59,11 +42,27 @@
                 </div>
             </div>
             <!-- hero section -->
+            <div class="hero-section container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        <div><h1>We help you build a successful career in tech.</h1>
+                        <h3>Study Now. Pay Later.</h3>
+                        <p>Backed by</p>
+                        <div style="width: 200px;">
+                            <img src="https://uploads-ssl.webflow.com/5ff6c1dbc139fb9bf9f6a511/616de76aec20f0f94ff3006b_Screen%20Shot%202021-10-19%20at%202.30.04%20AM-p-500.png" alt="" class="w-100">
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Skill up -->
             <!-- Partner companies -->
             <!-- -->
-        </div>
-    </div>
     <!-- Bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
