--- a/Week4/Bootstrap masterclass/index.html
+++ b/Week4/Bootstrap masterclass/index.html
@@ -42,9 +42,9 @@
                 </div>
             </div>
             <!-- hero section -->
-            <div class="hero-section container">
+            <div class="hero-section container " style="height: 100vh;">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-6 col-sm-12 w-100 h-100 d-flex justify-content-center align-items-center">
                         <div><h1>We help you build a successful career in tech.</h1>
                         <h3>Study Now. Pay Later.</h3>
                         <p>Backed by</p>
@@ -53,14 +53,34 @@
                         </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                         <div>
-
+                            <div class="hero-img" style="width: 600px;">
+                                <img src="https://uploads-ssl.webflow.com/5ff6c1dbc139fb9bf9f6a511/613fc885f2d5e644ba0b053f_resized-image-p-800.jpeg" alt="" style="width: 100%;">
+                            </div>
+                            <p>DevNation Students & Alumni</p>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Skill up -->
+            <div class="container-fluid" style="height: 100vh; background-color: rgb(238, 238, 238);">
+                <div class="skillup container">
+                    <div class="row">
+                        <h2 class="text-center">Skillup your dream career</h2>
+                    </div>
+                    <div class="row">
+                        <div class="card" style="width: 18rem; background-color: honeydew;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Full Stack Web App Development</h5>
+                              <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                             
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
             <!-- Partner companies -->
             <!-- -->
     <!-- Bootstrap scripts -->
