--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" src="index.css">
+  <link rel="stylesheet" href="./index.css">
   <title>Easybank landing page | Challenge</title>
 
 </head>
 <body>
   <!-- Navbar Section -->
-  <section id="navbar-sec">
+  <div class="grid-container">
     <!-- Navbar code -->
     <nav>
         <!-- Logo -->
@@ -28,20 +28,10 @@
         <!-- Call to Action -->
         <a href="" class="call-to-act-btn">Request Invite <span class="arrow-btn"> →</span></a>
     </nav>
-  </section>
+  </div>
   <!--
     .nav
   -->
-
-
-  Home
-  About
-  Contact
-  Blog
-  Careers
-
-  Request Invite
-
 
 
   Next generation digital banking
