--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Navbar Section -->
-  <div class="grid-container">
+  <div class="navbar-grid ">
     <!-- Navbar code -->
     <nav>
         <!-- Logo -->
@@ -26,7 +26,7 @@
             <li><a href="#FAQS">Careers</a></li>
         </ul>
         <!-- Call to Action -->
-        <a href="" class="call-to-act-btn">Request Invite <span class="arrow-btn"> →</span></a>
+        <a href="" class="call-to-act-btn">Request Invite</a>
     </nav>
   </div>
   <!--
