--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -29,8 +29,16 @@
         <a href="" class="call-to-act-btn">Request Invite</a>
     </nav>
   </div>
+  
   <!--
-    
+    .hero-grid
+      .hero-grid-right
+        h1
+        p
+        a.call-to-act-btn
+      .hero-grid-left
+        css:background-img:
+        img
   -->
 
 
