--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -29,7 +29,21 @@
         <a href="" class="call-to-act-btn">Request Invite</a>
     </nav>
   </div>
-  
+  <!-- Hero Div -->
+  <div class="hero-grid">
+    <!-- Right side of the hero div-->
+    <div class="hero-grid-right">
+      <h1>Next generation digital banking</h1>
+      <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
+        for spending, saving, budgeting, investing, and much more. </p>
+       <!-- Call to Action -->
+       <a href="" class="call-to-act-btn">Request Invite</a> 
+    </div>
+    <!-- Left Side of the div-->
+    <div class="hero-grid-left">
+      <img src="./images/image-mockups.png" alt="">
+    </div>
+  </div>
   <!--
     .hero-grid
       .hero-grid-right
@@ -42,11 +56,8 @@
   -->
 
 
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
+  
+  
   Request Invite
 
 
