--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -37,11 +37,15 @@
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more. </p>
        <!-- Call to Action -->
-       <a href="" class="call-to-act-btn">Request Invite</a> 
-    </div>
+       <div class="hero-btn">
+          <a href="" class="call-to-act-btn hero-btn">Request Invite</a> 
+       </div>
+      </div>
     <!-- Left Side of the div-->
     <div class="hero-grid-left">
-      <img src="./images/image-mockups.png" alt="">
+      <div>
+      <img src="./images/image-mockups.png" alt="" style="height: 120vh;">
+      </div>
     </div>
   </div>
   <!--
