Update index.html and index.css
Done with the hero grid

--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -31,8 +31,8 @@
   </div>
   <!-- Hero Div -->
   <div class="hero-grid">
-    <!-- Right side of the hero div-->
-    <div class="hero-grid-right">
+    <!-- Left side of the hero div-->
+    <div class="hero-grid-left">
       <h1>Next generation digital banking</h1>
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more. </p>
@@ -41,8 +41,8 @@
           <a href="" class="call-to-act-btn hero-btn">Request Invite</a> 
        </div>
       </div>
-    <!-- Left Side of the div-->
-    <div class="hero-grid-left">
+    <!-- Right Side of the div-->
+    <div class="hero-grid-right">
       <div>
       <img src="./images/image-mockups.png" alt="" style="height: 120vh;">
       </div>
