--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -49,14 +49,27 @@
     </div>
   </div>
   <!--
-    .hero-grid
-      .hero-grid-right
+    .about-us-grid
+      .about-us-grid-row
         h1
         p
-        a.call-to-act-btn
-      .hero-grid-left
-        css:background-img:
-        img
+      .about-us-grid-row .about-us-cards-grid
+        .about-us-card
+          .img
+          h3
+          p
+        .about-us-card
+          .img
+          h3
+          p
+        .about-us-card
+          .img
+          h3
+          p
+        .about-us-card
+          .img
+          h3
+          p
   -->
 
 
