--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -48,6 +48,46 @@
       </div>
     </div>
   </div>
+  <!-- About Us grid -->
+  <div class="about-us-grid">
+    <!-- title and description-->
+    <div class="about-us-grid-row-title">
+      <h1>Why Choose Easybank?</h1>
+      <p>We leverage Open Banking to turn your bank account into your financial hub.<br>Control 
+        your finances like never before.</p>
+    </div>
+    <!--  Cards Grid-->
+    <div class="about-us-grid-row-cards">
+      <!-- Card 1 -->
+      <div class="about-us-card">
+          <img src="./images/icon-online.svg" alt="">
+          <h3>Online Banking</h3>
+          <p>Our modern web and mobile applications allow you to keep track of your finances 
+            wherever you are in the world.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="about-us-card">
+        <img src="./images/icon-budgeting.svg" alt="">
+        <h3>Simple Budgeting</h3>
+        <p>See exactly where your money goes each month. Receive notifications when you’re 
+          close to hitting your limits.</p>
+      </div>
+      <!-- Card 1 -->
+      <div class="about-us-card">
+        <img src="./images/icon-onboarding.svg" alt="">
+        <h3>Fast Onboarding</h3>
+        <p>We don’t do branches. Open your account in minutes online and start taking control 
+          of your finances right away.</p>
+      </div>
+      <!-- Card 1 -->
+      <div class="about-us-card">
+        <img src="./images/icon-api.svg" alt="">
+        <h3>Open API</h3>
+        <p>Manage your savings, investments, pension, and much more from one account. Tracking 
+          your money has never been easier.</p>
+      </div>
+    </div>
+  </div>
   <!--
     .about-us-grid
       .about-us-grid-row
@@ -72,33 +112,14 @@
           p
   -->
 
+  
+  
 
   
   
-  Request Invite
 
-
-
-  Why choose Easybank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
+  
+  
 
   
 
