--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -52,7 +52,7 @@
   <div class="about-us-grid">
     <!-- title and description-->
     <div class="about-us-grid-row-title">
-      <h1>Why Choose Easybank?</h1>
+      <h2>Why choose Easybank?</h2>
       <p>We leverage Open Banking to turn your bank account into your financial hub.<br>Control 
         your finances like never before.</p>
     </div>
@@ -83,8 +83,7 @@
       <div class="about-us-card">
         <img src="./images/icon-api.svg" alt="">
         <h3>Open API</h3>
-        <p>Manage your savings, investments, pension, and much more from one account. Tracking 
-          your money has never been easier.</p>
+        <p>Manage your savings, investments, pension, tracking money and much more from one account.</p>
       </div>
     </div>
   </div>
