--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -87,26 +87,30 @@
       </div>
     </div>
   </div>
+  
   <!--
-    .about-us-grid
-      .about-us-grid-row
+    .blog-grid
+      .blog-row-title
         h1
-        p
-      .about-us-grid-row .about-us-cards-grid
-        .about-us-card
+      .blog-row-cards
+        .blog-card
           .img
+          p.author-name
           h3
           p
-        .about-us-card
+        .blog-card
           .img
+          p.author-name
           h3
           p
-        .about-us-card
+        .blog-card
           .img
+          p.author-name
           h3
           p
-        .about-us-card
+        .blog-card
           .img
+          p.author-name
           h3
           p
   -->
