--- a/Week4/A3-html-and-css/frontend-challenge-main/index.html
+++ b/Week4/A3-html-and-css/frontend-challenge-main/index.html
@@ -87,66 +87,47 @@
       </div>
     </div>
   </div>
-  
-  <!--
-    .blog-grid
-      .blog-row-title
-        h1
-      .blog-row-cards
-        .blog-card
-          .img
-          p.author-name
-          h3
-          p
-        .blog-card
-          .img
-          p.author-name
-          h3
-          p
-        .blog-card
-          .img
-          p.author-name
-          h3
-          p
-        .blog-card
-          .img
-          p.author-name
-          h3
-          p
-  -->
-
-  
-  
-
-  
-  
-
-  
-  
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
+  <!-- Blogs section -->
+  <div class="blog-grid">
+    <!-- Title -->
+    <div class="blog-row-title">
+      <h2>Latest Articles</h2>
+    </div>
+    <!-- Blog Cards Row-->
+    <div class="blog-row-cards">
+      <!-- Card 1-->
+      <div class="blog-card">
+        <img src="./images/image-currency.jpg" alt="Currency Image">
+        <p class="author-name">By Claire Robinson</p>
+        <h3>Receive money in any currency with no fees</h3>
+        <p>The world is getting smaller and we’re becoming more mobile. So why should you be 
+          forced to only receive money in a single …</p>
+      </div>
+      <!-- Card 2-->
+      <div class="blog-card">
+        <img src="./images/image-restaurant.jpg" alt="Resturant Image">
+        <p class="author-name">By Wilson Hutton</p>
+        <h3>Treat yourself without worrying about money</h3>
+        <p>Our simple budgeting feature allows you to separate out your spending and set 
+          realistic limits each month. That means you …</p>
+      <!-- Card 3-->
+      <div class="blog-card">
+        <img src="./images/image-plane.jpg" alt="Resturant Image">
+        <p class="author-name">By Wilson Hutton</p>
+        <h3>Take your Easybank card wherever you go</h3>
+        <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+          while you’re abroad. We’ll even show you …</p>
+      </div>
+      <!-- Card 4-->
+      <div class="blog-card">
+        <img src="./images/image-confetti.jpg" alt="Resturant Image">
+        <p class="author-name">By Claire Robinson</p>
+        <h3>Our invite-only Beta accounts are now live!</h3>
+        <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
+          It’s easy to request an invite through the site ...</p>
+      </div>
+    </div>
+  </div>
 
   
 
